[Build] java 17 features